Update drone manager: add new features and improvements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,6 @@ description = "Drone racing management web application POC"
 requires-python = ">=3.11"
 dependencies = [
     "flask>=3.0.0",
+    "flask-session>=0.5.0",
+    "werkzeug>=3.0.0",
 ]
