--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ dependencies = [
     "flask>=3.0.0",
     "flask-session>=0.5.0",
     "werkzeug>=3.0.0",
+    "psycopg2-binary>=2.9.0",
+    "gunicorn>=21.0.0",
 ]
