--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,66 @@
 # OS files
 .DS_Store
 *.log
+Thumbs.db
 
-# Environment variables
+# Environment variables and credentials
 .env
+.env.*
+!.env.example
 .env.local
-.env.*.local
+.env.development
+.env.staging
+.env.production
+.env.test
+*.env
+*.env.local
+*.env.*.local
+
+# Credentials and secrets
+*.key
+*.pem
+*.p12
+*.pfx
+*.jks
+*.keystore
+*secret*
+*credential*
+*password*
+credentials.json
+secrets.json
+config.json
+*.config
+*.conf
+!netlify.toml
+!package.json
+!package-lock.json
+
+# Supabase specific
+.supabase/
+supabase/.env
+supabase/.env.local
 
 # Database files (local development)
 *.db
 *.sqlite
 *.sqlite3
+*.sql
+!docs/*.sql
+
+# Session and cache files
+flask_session/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+# Virtual environments
+env/
+venv/
+ENV/
+.venv/
+.conda/
 
 # SpecStory
 .specstory/
@@ -26,13 +76,38 @@
 *.swp
 *.swo
 *~
+.project
+.classpath
+.settings/
 
 # Build outputs
 dist/
 build/
 *.min.js
 *.min.css
+.next/
+out/
 
 # Temporary files
 *.tmp
 *.temp
+*.bak
+*.backup
+*.old
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage and test reports
+coverage/
+.nyc_output/
+*.lcov
+
+# Node modules (if using npm/yarn in future)
+node_modules/
+package-lock.json
+yarn.lock
